# syncped

./: .clang-tidy  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  app.cpp  app.h  app.xpm  decorated-frame.cpp  decorated-frame.h  defs.h  editors.cpp  editors.h  find-files.cpp  find-files.h  frame.cpp  frame.h  syncped.desktop  test-syncped.robot  version.cpp  version.h
ci/: robocop.sh
locale/: CMakeLists.txt  po-sync.sh  syncped-fr.po  syncped-nl.po  syncped.pot
src/: CMakeLists.txt  app-handle.cpp  app.cpp  app.h  ascii-table.cpp  bind.cpp  decorated-frame.cpp  decorated-frame.h  defs.h  editors.cpp  find-files.cpp  find-files.h  frame.cpp  frame.h  menu.cpp  on-command.cpp  on-ui.cpp  stdin.cpp  toolbar-handle.cpp  version.cpp  version.h
test/: app.cpp  keywords.resource  robocop.sh  test-cmdline.robot  test-ex.robot  test-grep.robot  test-vi.robot
